--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 2. git clone https://github.com/mina998/amzAnalysis.git
 3. cd amzAnalysis
 4. pip3 install -r ./requirements.txt
-5. apt install redis
+5. apt install redis-server
 6. cp data.bak.db data.db
 7. python3 manage.py
 
