--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 3. cd amzAnalysis
 4. pip3 install -r ./requirements.txt
 5. apt install redis-server
-6. cp data.bak.db data.db
+6. cp data.db.bak data.db
 7. python3 manage.py
 
 # 数据控制台
